// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Participant should fail if cannot find the address remotely 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 fTuEVK"
    >
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 jvfbQA flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="relative w-full"
            >
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe sr-only"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    aria-invalid="true"
                    class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                    data-testid="select-list__input"
                    name="address"
                    readonly=""
                    tabindex="-1"
                    value="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq20"
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                >
                  <span
                    data-errortext="The address could not be found"
                    data-testid="Input__error"
                  >
                    <div
                      class="sc-bdvvtL qGXhc text-theme-danger-500"
                      height="20"
                      width="20"
                    >
                      <svg>
                        circle-exclamation-mark.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="SelectRecipient__dropdown-menu"
                  role="combobox"
                >
                  <label
                    for="SelectRecipient__dropdown-input"
                    id="SelectRecipient__dropdown-label"
                  />
                  <div
                    class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-18vw8a4-0 jiaHcL flex-shrink-0"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq20"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/></svg>"
                            title="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq20"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="SelectRecipient__dropdown-menu"
                        aria-invalid="true"
                        aria-labelledby="SelectRecipient__dropdown-label"
                        autocomplete="off"
                        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="SelectDropdown__input"
                        id="SelectRecipient__dropdown-input"
                        name="address"
                        placeholder="Select option"
                        value="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq20"
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                    >
                      <span
                        data-errortext="The address could not be found"
                        data-testid="Input__error"
                      >
                        <div
                          class="sc-bdvvtL qGXhc text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            circle-exclamation-mark.svg
                          </svg>
                        </div>
                      </span>
                      <div
                        class="pl-3"
                      >
                        <div
                          class="flex items-center cursor-pointer"
                          data-testid="SelectRecipient__select-recipient"
                        >
                          <div
                            class="sc-bdvvtL qGXhc"
                            height="20"
                            width="20"
                          >
                            <svg>
                              user.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <ul
                    aria-labelledby="SelectRecipient__dropdown-label"
                    class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
                    id="SelectRecipient__dropdown-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk my-4 w-full"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          Add Participant
        </div>
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 hSCHjT"
      >
        <div
          class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="flex-none py-6"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="flex-1 py-6 ml-5 w-28"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </td>
                <td
                  class="flex-none py-6 ml-3"
                >
                  <span
                    class="inline-block"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe"
                      data-testid="recipient-list__remove-recipient"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="py-1"
                        >
                          <div
                            class="sc-bdvvtL fCrhkg"
                            height="16"
                            width="16"
                          >
                            <svg>
                              trash.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should fail to find 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 fTuEVK"
    >
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 jvfbQA flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="relative w-full"
            >
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe sr-only"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    aria-invalid="true"
                    class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                    data-testid="select-list__input"
                    name="address"
                    readonly=""
                    tabindex="-1"
                    value="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyiba"
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                >
                  <span
                    data-errortext="The address could not be found"
                    data-testid="Input__error"
                  >
                    <div
                      class="sc-bdvvtL qGXhc text-theme-danger-500"
                      height="20"
                      width="20"
                    >
                      <svg>
                        circle-exclamation-mark.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="SelectRecipient__dropdown-menu"
                  role="combobox"
                >
                  <label
                    for="SelectRecipient__dropdown-input"
                    id="SelectRecipient__dropdown-label"
                  />
                  <div
                    class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-18vw8a4-0 jiaHcL flex-shrink-0"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyiba"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 152, 0)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"100\\" cy=\\"60\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"35\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                            title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyiba"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="SelectRecipient__dropdown-menu"
                        aria-invalid="true"
                        aria-labelledby="SelectRecipient__dropdown-label"
                        autocomplete="off"
                        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="SelectDropdown__input"
                        id="SelectRecipient__dropdown-input"
                        name="address"
                        placeholder="Select option"
                        value="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyiba"
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                    >
                      <span
                        data-errortext="The address could not be found"
                        data-testid="Input__error"
                      >
                        <div
                          class="sc-bdvvtL qGXhc text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            circle-exclamation-mark.svg
                          </svg>
                        </div>
                      </span>
                      <div
                        class="pl-3"
                      >
                        <div
                          class="flex items-center cursor-pointer"
                          data-testid="SelectRecipient__select-recipient"
                        >
                          <div
                            class="sc-bdvvtL qGXhc"
                            height="20"
                            width="20"
                          >
                            <svg>
                              user.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <ul
                    aria-labelledby="SelectRecipient__dropdown-label"
                    class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
                    id="SelectRecipient__dropdown-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk my-4 w-full"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          Add Participant
        </div>
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 hSCHjT"
      >
        <div
          class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="flex-none py-6"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="flex-1 py-6 ml-5 w-28"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </td>
                <td
                  class="flex-none py-6 ml-3"
                >
                  <span
                    class="inline-block"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe"
                      data-testid="recipient-list__remove-recipient"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="py-1"
                        >
                          <div
                            class="sc-bdvvtL fCrhkg"
                            height="16"
                            width="16"
                          >
                            <svg>
                              trash.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should fail with a duplicate address 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 fTuEVK"
    >
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 jvfbQA flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="relative w-full"
            >
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe sr-only"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    aria-invalid="true"
                    class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                    data-testid="select-list__input"
                    name="address"
                    readonly=""
                    tabindex="-1"
                    value="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                >
                  <span
                    data-errortext="The address is already in the list"
                    data-testid="Input__error"
                  >
                    <div
                      class="sc-bdvvtL qGXhc text-theme-danger-500"
                      height="20"
                      width="20"
                    >
                      <svg>
                        circle-exclamation-mark.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="SelectRecipient__dropdown-menu"
                  role="combobox"
                >
                  <label
                    for="SelectRecipient__dropdown-input"
                    id="SelectRecipient__dropdown-label"
                  />
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD…
                  </div>
                  <div
                    class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-18vw8a4-0 jiaHcL flex-shrink-0"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                            title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          />
                        </div>
                      </div>
                      <span
                        class="TruncateEnd__Wrapper-sc-1hhdnni-0 font-semibold ml-2"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </div>
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="SelectRecipient__dropdown-menu"
                        aria-invalid="true"
                        aria-labelledby="SelectRecipient__dropdown-label"
                        autocomplete="off"
                        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="SelectDropdown__input"
                        id="SelectRecipient__dropdown-input"
                        name="address"
                        placeholder="Select option"
                        value="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                      <span
                        class="absolute inset-y-0 flex items-center font-normal opacity-50 pointer-events-none w-full"
                        data-testid="Input__suggestion"
                      >
                        <span
                          class="truncate"
                        >
                          D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                        </span>
                      </span>
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                    >
                      <span
                        data-errortext="The address is already in the list"
                        data-testid="Input__error"
                      >
                        <div
                          class="sc-bdvvtL qGXhc text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            circle-exclamation-mark.svg
                          </svg>
                        </div>
                      </span>
                      <div
                        class="pl-3"
                      >
                        <div
                          class="flex items-center cursor-pointer"
                          data-testid="SelectRecipient__select-recipient"
                        >
                          <div
                            class="sc-bdvvtL qGXhc"
                            height="20"
                            width="20"
                          >
                            <svg>
                              user.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <ul
                    aria-labelledby="SelectRecipient__dropdown-label"
                    class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
                    id="SelectRecipient__dropdown-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk my-4 w-full"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          Add Participant
        </div>
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 hSCHjT"
      >
        <div
          class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="flex-none py-6"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="flex-1 py-6 ml-5 w-28"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </td>
                <td
                  class="flex-none py-6 ml-3"
                >
                  <span
                    class="inline-block"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe"
                      data-testid="recipient-list__remove-recipient"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="py-1"
                        >
                          <div
                            class="sc-bdvvtL fCrhkg"
                            height="16"
                            width="16"
                          >
                            <svg>
                              trash.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should fail with cold wallet 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 fTuEVK"
    >
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 jvfbQA flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="relative w-full"
            >
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe sr-only"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    aria-invalid="true"
                    class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                    data-testid="select-list__input"
                    name="address"
                    readonly=""
                    tabindex="-1"
                    value="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
                  />
                </div>
                <div
                  class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                >
                  <span
                    data-errortext="The public key could not be found"
                    data-testid="Input__error"
                  >
                    <div
                      class="sc-bdvvtL qGXhc text-theme-danger-500"
                      height="20"
                      width="20"
                    >
                      <svg>
                        circle-exclamation-mark.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="SelectRecipient__dropdown-menu"
                  role="combobox"
                >
                  <label
                    for="SelectRecipient__dropdown-input"
                    id="SelectRecipient__dropdown-label"
                  />
                  <div
                    class="Input__InputWrapperStyled-sc-1i8sd1r-0 lnWRPe"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Avatar__AvatarWrapper-sc-18vw8a4-0 jiaHcL flex-shrink-0"
                        data-testid="Avatar"
                      >
                        <div
                          class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                        >
                          <img
                            alt="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
                            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"35\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/></svg>"
                            title="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="SelectRecipient__dropdown-menu"
                        aria-invalid="true"
                        aria-labelledby="SelectRecipient__dropdown-label"
                        autocomplete="off"
                        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="SelectDropdown__input"
                        id="SelectRecipient__dropdown-input"
                        name="address"
                        placeholder="Select option"
                        value="DC8ghUdhS8w8d11K8cFQ37YsLBFhL3Dq2P"
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                    >
                      <span
                        data-errortext="The public key could not be found"
                        data-testid="Input__error"
                      >
                        <div
                          class="sc-bdvvtL qGXhc text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            circle-exclamation-mark.svg
                          </svg>
                        </div>
                      </span>
                      <div
                        class="pl-3"
                      >
                        <div
                          class="flex items-center cursor-pointer"
                          data-testid="SelectRecipient__select-recipient"
                        >
                          <div
                            class="sc-bdvvtL qGXhc"
                            height="20"
                            width="20"
                          >
                            <svg>
                              user.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <ul
                    aria-labelledby="SelectRecipient__dropdown-label"
                    class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
                    id="SelectRecipient__dropdown-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk my-4 w-full"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          Add Participant
        </div>
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 hSCHjT"
      >
        <div
          class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="flex-none py-6"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="flex-1 py-6 ml-5 w-28"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </td>
                <td
                  class="flex-none py-6 ml-3"
                >
                  <span
                    class="inline-block"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe"
                      data-testid="recipient-list__remove-recipient"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="py-1"
                        >
                          <div
                            class="sc-bdvvtL fCrhkg"
                            height="16"
                            width="16"
                          >
                            <svg>
                              trash.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should render custom participants 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 fTuEVK"
    >
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="relative w-full"
            >
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    aria-invalid="false"
                    class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                    data-testid="select-list__input"
                    name="address"
                    readonly=""
                    tabindex="-1"
                    value=""
                  />
                </div>
              </div>
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="SelectRecipient__dropdown-menu"
                  role="combobox"
                >
                  <label
                    for="SelectRecipient__dropdown-input"
                    id="SelectRecipient__dropdown-label"
                  />
                  <div
                    class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                      />
                    </div>
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="SelectRecipient__dropdown-menu"
                        aria-invalid="false"
                        aria-labelledby="SelectRecipient__dropdown-label"
                        autocomplete="off"
                        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                        data-testid="SelectDropdown__input"
                        id="SelectRecipient__dropdown-input"
                        name="address"
                        placeholder="Select option"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="flex items-center cursor-pointer"
                          data-testid="SelectRecipient__select-recipient"
                        >
                          <div
                            class="sc-bdvvtL qGXhc"
                            height="20"
                            width="20"
                          >
                            <svg>
                              user.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <ul
                    aria-labelledby="SelectRecipient__dropdown-label"
                    class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
                    id="SelectRecipient__dropdown-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe my-4 w-full"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          Add Participant
        </div>
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 hSCHjT"
      >
        <div
          class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="flex-none py-6"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                        title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="flex-1 py-6 ml-5 w-28"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                    </span>
                  </div>
                </td>
                <td
                  class="flex-none py-6 ml-3"
                >
                  <span
                    class="inline-block"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
                      data-testid="recipient-list__remove-recipient"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="py-1"
                        >
                          <div
                            class="sc-bdvvtL fCrhkg"
                            height="16"
                            width="16"
                          >
                            <svg>
                              trash.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Add Participant should work with an imported wallet 1`] = `
<DocumentFragment>
  <div>
    <div
      class="SubForm__SubFormWrapper-sc-1x20s74-0 fTuEVK"
    >
      <fieldset
        class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
      >
        <label
          class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
          data-testid="FormLabel"
          for="address"
        >
          Multisignature Participant
        </label>
        <div>
          <div
            class="flex relative items-center w-full text-left"
            data-testid="SelectRecipient__wrapper"
          >
            <div
              class="relative w-full"
            >
              <div
                class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR sr-only"
              >
                <div
                  class="relative flex flex-1 h-full"
                >
                  <input
                    aria-invalid="false"
                    class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                    data-testid="select-list__input"
                    name="address"
                    readonly=""
                    tabindex="-1"
                    value=""
                  />
                </div>
              </div>
              <div
                class="relative w-full"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="SelectRecipient__dropdown-menu"
                  role="combobox"
                >
                  <label
                    for="SelectRecipient__dropdown-input"
                    id="SelectRecipient__dropdown-label"
                  />
                  <div
                    class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
                  >
                    <div
                      class="flex items-center"
                    >
                      <div
                        class="Circle__CircleWrapper-sc-d5u41q-0 bcplCx bg-theme-secondary-200 border-theme-secondary-200 dark:bg-theme-secondary-700 dark:border-theme-secondary-700 ring-theme-background"
                      />
                    </div>
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="SelectRecipient__dropdown-menu"
                        aria-invalid="false"
                        aria-labelledby="SelectRecipient__dropdown-label"
                        autocomplete="off"
                        class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                        data-testid="SelectDropdown__input"
                        id="SelectRecipient__dropdown-input"
                        name="address"
                        placeholder="Select option"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <div
                        class=""
                      >
                        <div
                          class="flex items-center cursor-pointer"
                          data-testid="SelectRecipient__select-recipient"
                        >
                          <div
                            class="sc-bdvvtL qGXhc"
                            height="20"
                            width="20"
                          >
                            <svg>
                              user.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <ul
                    aria-labelledby="SelectRecipient__dropdown-label"
                    class="styles__SelectOptionsList-sc-120rtxy-0 dJMsqc"
                    id="SelectRecipient__dropdown-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <button
        class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe my-4 w-full"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          Add Participant
        </div>
      </button>
    </div>
    <div
      class="mt-3 border-b border-dashed border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 hSCHjT"
      >
        <div
          class="Table__TableWrapper-sc-1gcp0fb-0 jHfvAR -mt-3"
          role="table"
        >
          <table
            cellpadding="0"
            class="table-auto"
          >
            <thead>
              <tr
                class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                role="row"
              >
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--0"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Avatar
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--1"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Address
                    </div>
                  </div>
                </th>
                <th
                  class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                  colspan="1"
                  data-testid="table__th--2"
                  role="columnheader"
                >
                  <div
                    class="flex flex-inline align-top hidden"
                  >
                    <div>
                      Action
                    </div>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            >
              <tr
                class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="flex-none py-6"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                        title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="flex-1 py-6 ml-5 w-28"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <span>
                      Participant #1
                    </span>
                  </div>
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </td>
                <td
                  class="flex-none py-6 ml-3"
                >
                  <span
                    class="inline-block"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe"
                      data-testid="recipient-list__remove-recipient"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="py-1"
                        >
                          <div
                            class="sc-bdvvtL fCrhkg"
                            height="16"
                            width="16"
                          >
                            <svg>
                              trash.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                </td>
              </tr>
              <tr
                class="flex border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                data-testid="recipient-list__recipient-list-item"
              >
                <td
                  class="flex-none py-6"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-18vw8a4-0 ewMeZp flex-shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                    >
                      <img
                        alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                        title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      />
                    </div>
                  </div>
                </td>
                <td
                  class="flex-1 py-6 ml-5 w-28"
                >
                  <div
                    class="mb-1 text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    <span>
                      Participant #2
                    </span>
                  </div>
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="TruncateEnd__Wrapper-sc-1hhdnni-0"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 2
                      </span>
                    </span>
                    <span
                      class="inline-flex overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                    </span>
                  </div>
                </td>
                <td
                  class="flex-none py-6 ml-3"
                >
                  <span
                    class="inline-block"
                  >
                    <button
                      class="OriginalButton__StyledButton-sc-o0fs2j-0 fxPCrX"
                      data-testid="recipient-list__remove-recipient"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="py-1"
                        >
                          <div
                            class="sc-bdvvtL fCrhkg"
                            height="16"
                            width="16"
                          >
                            <svg>
                              trash.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </button>
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
